<resources>
    <string name="app_name">Ahmad_Yusup_Mobile_Morning_B</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>