<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="40sp"/>


    <EditText
        android:layout_width="1000dp"
        android:layout_height="50dp"
        android:hint="@string/nama_lengkap"
        android:layout_marginTop="280dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="1000dp"
        android:layout_height="50dp"
        android:hint="@string/alamat_email"
        android:layout_marginTop="340dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="1000dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginTop="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/buttonRegis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="125dp"
        android:text="@string/register" />

</RelativeLayout>